--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
         networks:
             - backend
     postgres:
-        image: postgres:latest
+        image: postgis/postgis:14-3.2
         volumes:
             - postgres-data:/var/lib/postgresql/data
         ports:
